--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bundle-loader": "^0.5.5",
     "css-loader": "^0.28.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
